# LaptopAPI

./: .env  .env.test  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  healthcheck.sh  logging.yaml  main.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 1cf34bd1dc73_.py  4b0bf9b3cffb_.py  6126ad051712_.py  6547d7b894a2_add_laptop_model.py  72cba459bdcc_.py  862002140f47_create_table_users.py  afd8e93b3209_.py  f7ba7c5273f6_.py
config/: TestSettings.py  settings.py
elasticsearch/: Dockerfile
etc/: S3Service.py  cache.py  create_all_topics.py  file_mngmnt.py  laptop.py  mongo_sessionmaker.py  producer.py  run_all_consumers.py  run_auth_consumer.py  run_db_consumer.py  run_redis_consumer.py  s3_uow.py
etc/admin_service/kafka/: producer.py
etc/auth_service/kafka/: consumer.py  producer.py
etc/db_service/kafka/: consumer.py  producer.py
etc/db_service/service/: database_service.py  models.py
etc/users_service/service/: schemas.py  users_service.py
kibana/: Dockerfile
kibana/config/: kibana.yml
logstash/: Dockerfile
logstash/pipeline/: logstash.conf
services/admin_service/service/: admin_service.py  depends.py  schemas.py
services/auth_service/service/: authorization_service.py  depends.py  exc.py  schemas.py
services/db_service/service/: exc.py  schemas.py
services/redis_service/kafka/: consumer.py
services/users_service/kafka/: producer.py
setup/: Dockerfile  entrypoint.sh
src/application/repositories/: PostgresRepository.py  S3Repository.py
src/application/services/: LaptopService.py  TaskService.py  (+1 more)
src/core/: routers.py
src/db/: db.py  realtional_db.py
src/entities/: LaptopObj.py  UserActivityObj.py  UserObj.py  entities.py
src/interfaces/: AbstractCache.py  AbstractDatabase.py  AbstractStorage.py
src/models/: models.py  sql_models.py
src/presentation/: dependencies.py
src/repositories/: activity.py  cache.py  jsondata.py  laptop.py  user.py  user_activity.py
src/s3/: s3_client_factory.py
src/schemas/: schemas.py
src/services/: ActivityService.py  JsonDataService.py  LaptopService.py  UserActivityService.py  UserService.py
src/utils/: PostgresRepository.py  RedisRepository.py  S3Repository.py  UnitOfWork.py  helpers.py  logger.py
tests/: conftest.py  test_account.py  test_api.py  test_auth.py
workers/: app.py  tasks.py  worker.py
(+23 files in other folders)
