[project]
name = "laptop-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Enchanted",email = "example@mail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <=3.12.7"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "greenlet (>=3.2.2,<4.0.0)",
    "aiobotocore (>=2.22.0,<3.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "email-validator (>=2.2.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "elasticsearch (==8.8.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
]

[tool.poetry]
packages = [{include = "laptop api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
